crates/shiplog-redaction-repo/tests/snapshots/snapshot_tests__redacted_private_repo.snap
---
source: crates/shiplog-redaction-repo/tests/snapshot_tests.rs
expression: json
---
{
  "full_name": "repo-REDACTED(acme/private-service)",
  "html_url": null,
  "visibility": "Unknown"
}
