crates/shiplog-redaction-repo/tests/snapshots/snapshot_tests__redacted_public_repo.snap
---
source: crates/shiplog-redaction-repo/tests/snapshot_tests.rs
expression: json
---
{
  "full_name": "repo-REDACTED(oss/public-lib)",
  "html_url": null,
  "visibility": "Unknown"
}
