crates/shiplog-redaction-repo/tests/snapshots/snapshot_tests__redacted_repo_no_url.snap
---
source: crates/shiplog-redaction-repo/tests/snapshot_tests.rs
expression: json
---
{
  "full_name": "repo-REDACTED(internal/no-url-repo)",
  "html_url": null,
  "visibility": "Unknown"
}
